@@ -2,6 +2,10 @@
 
 	* inst/include/Rcpp/sugar/: rework sugar matrix so that operator()(int,int)
 	is always used instead of operator[](int)
+	
+	* inst/include/Rcpp/sugar/matrix/outer.h: new implementation based on 
+	LazyVector, so that the value from the vector expression is only 
+	retrieved once
 
 2010-08-02  Romain Francois <romain@r-enthusiasts.com>
 
